# MTA-Solver

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/modules/: helpers.rs  mod.rs  remove_specific_files.rs  update_mta.rs  verify_resources.rs
